tests/neg/indent-experimental.scala
import language.experimental.fewerBraces

val x =
  if true then:  // error
    1
  else:  // error
    2

